--- a/patshkowski.aj/recipes/styles/style.css
+++ b/patshkowski.aj/recipes/styles/style.css
@@ -12,7 +12,29 @@ body {
 }
 
 
-
+.button{
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	background-color: #CD9589;
+	border: solid 5px;
+	border-color: white;
+	font-family: "SF Compact", sans-serif;
+	font-size: 25px;
+	color: white;
+	padding: 10px;
+	width: 100px;
+	text-align: center;
+	text-decoration: none;
+	overflow: hidden;
+	cursor: pointer;
+}
+.button:hover{
+	background-color: white;
+	border: solid 5px;
+	border-color: #CD9589;
+	color: #CD9589;
+}
 
 img.knives {
 	position: absolute;
@@ -99,7 +121,7 @@ img.knives {
 	width: 60%;
 	background-color: #DA9B98;
 	padding: 20px;
-	font-family: "SF Compact";
+	font-family: "SF Compact", sans-serif;
 }
 
 .recipe2{
@@ -108,7 +130,7 @@ img.knives {
 	width: 60%;
 	background-color: #DA9B98;
 	padding: 20px;
-	font-family: "SF Compact";
+	font-family: "SF Compact", sans-serif;
 }
 
 
@@ -118,7 +140,11 @@ img.knives {
 	width: 60%;
 	background-color: #DA9B98;
 	padding: 20px;
-	font-family: "SF Compact";
+	font-family: "SF Compact", sans-serif;
 }
 
 
+a{
+	color: white;
+	text-decoration: none;
+}
