--- a/patshkowski.aj/css/storetheme.css
+++ b/patshkowski.aj/css/storetheme.css
@@ -1,18 +1,13 @@
 :root {
-	--color-neutral-light:#eee;
-
-	--color-neutral-medium:#eee;
-
-	--color-neutral-dark:#f2f2f2; 
+	--color-neutral-light:#f6f6f6;
+	--color-neutral-medium:#c5c5c5;
+	--color-neutral-dark:#313131; 
 }
 
 
 body {
-	background-color:#040404;
+	background-color:var(--color-neutral-light);
 }
 
 
-
-
-/* CARD */
 
