--- a/patshkowski.aj/lib/css/styleguide.css
+++ b/patshkowski.aj/lib/css/styleguide.css
@@ -162,6 +162,49 @@ a:hover {
 	padding:0;
 }
 
+.card.features {
+	background-color:var(--color-white);
+	box-shadow:3px 4px 10px 3px rgb(0, 0, 0, .08);
+	border-radius:0.5em;
+	margin: 2em 1em 1em 1em;
+	width: 30%;
+	padding: 2em;
+	text-align: center;
+	color: black;
+	float: left;
+
+}
 
 
 
+
+/* BUTTONS */
+
+.button.dark {
+	background-color: var(--color-neutral-dark);
+	border:none;
+	color:white;
+	padding: 1em 2em;
+	text-align:center;
+	text-decoration:none;
+	display:inline-block;
+	font-size:1.5em;
+}
+
+.button.light {
+	background-color: var(--color-neutral-light);
+	border:none;
+	color:black;
+	padding: 1em 2em;
+	text-align:center;
+	text-decoration:none;
+	display:inline-block;
+	font-size:1.5em;
+}
+
+.button.round {
+	border-radius: .5em;
+	background-color:var(--color-black);
+	color:var(--color-white);
+	padding:1em;
+}
