--- a/patshkowski.aj/product/css/producttheme.css
+++ b/patshkowski.aj/product/css/producttheme.css
@@ -1,7 +1,16 @@
 
+:root {
+	--color-neutral-light:#e9c288;
+	--color-neutral-medium:#f27b6e;
+	--color-neutral-dark:#56354c;
+}
 
 .main {
 	padding: 2em;
+}
+
+h1 {
+	color:var(--color-neutral-medium);
 }
 
 
@@ -14,3 +23,24 @@
 	list-style-type:none;
 }
 
+.card.features ul {
+	align-items:center;
+	vertical-align: center;
+}
+
+.container.benefits {
+	padding:2em;
+}
+
+.button.round {
+	background-color:var(--color-neutral-medium);
+}
+
+footer {
+	background-color:var(--color-neutral-dark);
+	min-height:2em;
+	color:var(--color-white);
+	text-align:center;
+	margin:0 auto;
+	justify-content: center;
+}
