--- a/patshkowski.aj/css/storetheme.css
+++ b/patshkowski.aj/css/storetheme.css
@@ -100,6 +100,13 @@ body {
 	background-color:var(--color-neutral-medium);
 }
 
+
+@media (max-width:1000px) {
+   .container {
+      padding-left:10px;
+      padding-right:10px;
+   }
+}
 @media (max-width:500px) {
 	:root {
 		--header-height:2rem;
@@ -125,8 +132,19 @@ body {
    text-decoration:none;
    box-shadow:0 0 15px rgba(0,0,0,0.3);
 }
+.product-image {
+	height:0;
+	width:100%;
+	position:relative;
+	padding-bottom:60%; 
+}
 .product-image img {
-   max-width:100%;
+   position:absolute;
+   top:0;
+   left:0;
+   width:100%;
+   height:100%;
+   object-fit:cover;
    vertical-align:middle;
    border-radius:10px;
 }
@@ -140,7 +158,10 @@ body {
    font-size:0.9em;
 }
 
-
+.product-list .product {
+	height:100%;
+	width:100%;
+}
 
 button.red {
 	background-color: var(--color-red);
@@ -239,3 +260,5 @@ button.blues {
 [class*='col-']>.card {
 	height:100%;
 }
+
+
