--- a/patshkowski.aj/css/storetheme.css
+++ b/patshkowski.aj/css/storetheme.css
@@ -167,6 +167,33 @@ body {
 	width:100%;
 }
 
+.product-display .product-title {
+   font-size:1.3em;
+   font-weight:bold;
+}
+
+
+.image-main {
+   width:100%;
+   height:0;
+   position:relative;
+   padding-bottom:70%;
+}
+.image-main img {
+   position:absolute;
+   top:0;
+   left:0;
+   width:100%;
+   height:100%;
+   object-fit:cover;
+}
+.image-thumbs img {
+   width:8em;
+   height:6em;
+   object-fit:cover;
+}
+
+
 button.red {
 	background-color: var(--color-red);
 	border:none;
