--- a/patshkowski.aj/lib/css/styleguide.css
+++ b/patshkowski.aj/lib/css/styleguide.css
@@ -363,6 +363,16 @@ button.round {
 	padding:0;
 }
 
+.card-section {
+   padding:1em;
+}
+.card-section~.card-section {
+   border-top:1px solid var(--color-neutral-light);
+}
+
+.card>:first-child { margin-top:0; }
+.card>:last-child { margin-bottom:0; }
+
 .card.featured {
 	background-color:var(--color-white);
 	box-shadow:3px 4px 10px 3px rgb(0, 0, 0, .08);
