--- a/patshkowski.aj/css/storetheme.css
+++ b/patshkowski.aj/css/storetheme.css
@@ -18,8 +18,8 @@
 
 
 
-	/*
-	--color-rygradient:linear-gradient(to right, rgba(218,216,105,1), rgba(236,163,104,1), rgba(240,125,112,1);
+	
+/*	--color-rygradient:linear-gradient(to right, rgba(218,216,105,1), rgba(236,163,104,1), rgba(240,125,112,1);
 	--color-bggradient:linear-gradient(to right, rgba(87,170,210,1), rgba(117,192,192,1), rgba(172,216,149,1);
 	--color-rainbowgradient:linear-gradient(to right, rgba(87,170,210,1), rgba(117,192,192,1), rgba(172,216,149,1), rgba(218,216,105,1), rgba(236,163,104,1), rgba(240,125,112,1);
 */
@@ -294,5 +294,106 @@ h2.summer {
 /*[class*='col-']>.card {
 	height:100%;
 }*/
+
+
+
+footer{
+	position:fixed;
+	bottom:0;
+}
+
+@media (max-height:800px){
+	footer { position: static; }
+}
+
+.responsive-footer{
+	background-color:var(--color-aqua);
+	box-sizing:border-box;
+	width:100%;
+	text-align:left;
+	padding:50px 50px 60px 50px;
+	margin-top:80px;
+}
+
+.responsive-footer.footer-left,
+.responsive-footer.footer-center,
+.responsive-footer.footer-right{
+	display:inline-block;
+	vertical-align:top;
+}
+
+.responsive-footer.footer-left{
+	width:30%;
+}
+
+.responsive-footer.footer-left img{
+	width:30%;
+}
+
+.responsive-footer.footer-links a{
+	display:inline-block;
+	line-height:1.8;
+	text-decoration:none;
+	color:inherit;
+}
+
+.responsive-footer.copyright{
+	margin:0;
+}
+
+.responsive-footer.footer-center{
+	width:35%;
+}
+
+.responsive-footer.footer-social{
+	margin-top:25px;
+}
+
+.responsive-footer.footer-social a{
+	display:inline-block;
+	width:35px;
+	height:35px;
+	cursor:pointer;
+	background-color:var(--color-green);
+	border-radius:2px;
+	color:#ffffff;
+	text-align:center;
+	line-height:35px;
+	margin-right:35px;
+	margin-bottom:5px;
+}
+
+img.social{
+	width:1em;
+}
+
+@media (max-width: 880px) {
+
+	.responsive-footer.footer-left,
+	.responsive-footer.footer-center,
+	.responsive-footer.footer-right{
+		display: block;
+		width: 100%;
+		margin-bottom: 40px;
+		text-align: center;
+	}
+
+	.responsive-footer.footer-center i{
+		margin-left: 0;
+	}
+
+}
+
+
+.radio-colors label {
+	display:inline-block;
+	width:2em;
+	height:2em;
+	border:solid 1px;
+}
+
+.radio-colors label, ^black{
+	background-color:black;
+}
 
 
