--- a/patshkowski.aj/css/storetheme.css
+++ b/patshkowski.aj/css/storetheme.css
@@ -185,12 +185,12 @@ body {
    left:0;
    width:100%;
    height:100%;
-   object-fit:cover;
+   object-fit:contain;
 }
 .image-thumbs img {
    width:8em;
    height:6em;
-   object-fit:cover;
+   object-fit:contain;
 }
 
 
